# huseyinbabal_taws

./: Cargo.toml  Dockerfile  README.md
.github/: CODEOWNERS  FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: pr-check.yml  release.yml  stale-branch.yml
src/: app.rs  config.rs  event.rs  main.rs
src/aws/: client.rs  console_login.rs  credentials.rs  http.rs  mod.rs  sso.rs
src/resource/: data_driven_dispatch.rs  dispatch.rs  fetcher.rs  field_mapper.rs  mod.rs  path_extractor.rs  protocol.rs  registry.rs  sdk_dispatch.rs
src/resource/handlers/: json.rs  mod.rs  query.rs  rest_json.rs  rest_xml.rs
src/resources/: acm.json  apigateway.json  athena.json  autoscaling.json  cloudformation.json  cloudfront.json  cloudtrail.json  cloudwatch.json  codepipeline.json  cognito.json  dynamodb.json  ec2.json  ecr.json  ecs.json  elasticache.json  elbv2.json  eventbridge.json  iam.json  lambda.json  rds.json  route53.json  s3.json  secretsmanager.json  sns.json  sqs.json  ssm.json  vpc.json
src/ui/: dialog.rs  header.rs  help.rs  highlight.rs  mod.rs  splash.rs
