[package]
name = "taws"
version = "0.1.0"
edition = "2021"

[dependencies]
# TUI
ratatui = "0.30"
crossterm = "0.29"

# AWS (lightweight - SigV4 only, no SDK)
aws-sigv4 = "1.2"
aws-credential-types = "1.2"
aws-smithy-runtime-api = "1.2"

# HTTP client
reqwest = { version = "0.12", features = ["json"] }
url = "2.5"
urlencoding = "2.1"

# Async runtime
tokio = { version = "1.49", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Utils
anyhow = "1.0"
dirs = "6.0"
